--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-Welcome to Gutenprint 5.1.0!  Please read these notes carefully.
+Welcome to Gutenprint 5.1.1!  Please read these notes carefully.
 
 ================================================================
 
 I) INTRODUCTION
 
-    This is Gutenprint version 5.1.0, the first development release of
+    This is Gutenprint version 5.1.1, a development release of
     Gutenprint 5.1 that will eventually lead to Gutenprint 5.2.
     Gutenprint, formerly named Gimp-Print, is a suite of printer
     drivers that may be used with most common UNIX print spooling
